Pullquote whitespace fix

--- a/src/sass/components/timeline/_timeline-entry-pullquote.scss
+++ b/src/sass/components/timeline/_timeline-entry-pullquote.scss
@@ -1,7 +1,8 @@
 .timeline-entry-pullquote {
   $connection-width--small: 28px;
+  margin: 2em $grid-padding 0 ($grid-padding + $marker-width--small + $connection-width--small);
   blockquote {
-    margin: 2em $grid-padding 0 ($grid-padding + $marker-width--small + $connection-width--small);
+    margin: 0;
     color: white;
     border-left-color: rgba(white, 0.3);
     cite {
